# spinniped

./: .gitignore  LICENSE  README.md  build_local_package.ps1  pyproject.toml
benchmark/: 01_beam_freq.py
examples/: 01_simple_shaft_modal.py  02_simple_shaft_modal_with_bearings.py
spinniped/: __init__.py  dtypes.py  element.py  node.py  results.py  rotor.py  solver.py
test/: 00_any.py
tests/: README.md  conftest.py  test_analytical_benchmarks.py  test_assembly.py  test_convergence.py  test_element_matrices.py
theory/: 00_notation.md  01_shaft_element.md
